--- a/index.html
+++ b/index.html
@@ -29,5 +29,11 @@
     </section>
     <section id="projects" class="box">
         <h2>Projekty</h2>
+        <div class="projectsbox">
+            <div id="project1" class="project"></div>
+            <div id="project2" class="project"></div>
+            <div id="project3" class="project"></div>
+            <div id="project4" class="project"></div>
+        </div>
     </section>
 </html>
