--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -35,5 +35,8 @@
             <div id="project3" class="project"></div>
             <div id="project4" class="project"></div>
         </div>
+    </section>
+    <section id="skills" class="box">
+        
     </section>
 </html>
