--- a/index.html
+++ b/index.html
@@ -37,6 +37,31 @@
         </div>
     </section>
     <section id="skills" class="box">
-        
+        <h2>Umiejętności</h2>
+        <div class="skillsbox">
+            <div id="skill1" class="skill">
+                <img src="" alt="" class="skillimg">
+                <p>Regular</p>
+            </div>
+            <div id="skill2" class="skill">
+                <img src="" alt="" class="skillimg">
+                <p>Regular</p>
+            </div>
+            <div id="skill3" class="skill">
+                <img src="" alt="" class="skillimg">
+                <p>Junior</p>
+            </div>
+            <div id="skill4" class="skill">
+                <img src="" alt="" class="skillimg">
+                <p>Junior</p>
+            </div>
+            <div id="skill5" class="skill">
+                <img src="" alt="" class="skillimg">
+                <p>Junior</p>
+            </div>
+            <div id="skill6" class="skill"></div>
+            <div id="skill7" class="skill"></div>
+            <div id="skill8" class="skill"></div>
+        </div>
     </section>
 </html>
