added arrow, skills box

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
     <section id="intro" class="box">
         <h1>Adam Troszczyński</h1>
         <p>Junior frontend developer</p>
+        <a href="#aboutme"><img src="./img/arrow.png" id="arrow"></a>
     </section>
     <section id="aboutme" class="box">
         <h2>O mnie</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ipsum inventore id qui suscipit
             voluptatum officiis possimus quae vero? Distinctio voluptas et iste! Facilis illum accusamus quas
             laboriosam, debitis harum.</p>
+            <a href="#projects"><img src="./img/arrow.png" id="arrow"></a>
     </section>
     <section id="projects" class="box">
         <h2>Projekty</h2>
@@ -35,33 +37,44 @@
             <div id="project3" class="project"></div>
             <div id="project4" class="project"></div>
         </div>
+        <a href="#skills"><img src="./img/arrow.png" id="arrow"></a>
     </section>
     <section id="skills" class="box">
         <h2>Umiejętności</h2>
         <div class="skillsbox">
             <div id="skill1" class="skill">
-                <img src="" alt="" class="skillimg">
+                <img src="./img/icons/html.png" alt="" class="skillimg">
                 <p>Regular</p>
             </div>
             <div id="skill2" class="skill">
-                <img src="" alt="" class="skillimg">
+                <img src="./img/icons/css.png" alt="" class="skillimg">
                 <p>Regular</p>
             </div>
             <div id="skill3" class="skill">
-                <img src="" alt="" class="skillimg">
+                <img src="./img/icons/js.png" alt="" class="skillimg">
                 <p>Junior</p>
             </div>
             <div id="skill4" class="skill">
-                <img src="" alt="" class="skillimg">
+                <img src="./img/icons/sass.png" alt="" class="skillimg">
                 <p>Junior</p>
             </div>
             <div id="skill5" class="skill">
-                <img src="" alt="" class="skillimg">
+                <img src="./img/icons/git.png" alt="" class="skillimg">
                 <p>Junior</p>
             </div>
-            <div id="skill6" class="skill"></div>
-            <div id="skill7" class="skill"></div>
-            <div id="skill8" class="skill"></div>
+            <div id="skill6" class="skill">
+                <img src="./img/icons/node.png" alt="" class="skillimg">
+                <p>Junior</p>
+            </div>
+            <div id="skill7" class="skill">
+                <img src="./img/icons/visual.png" alt="" class="skillimg">
+                <p>Junior</p>
+            </div>
+            <div id="skill8" class="skill">
+                <img src="./img/icons/english.png" alt="" class="skillimg">
+                <p>B1</p>
+            </div>
         </div>
+        <a href=""><img src="./img/arrow.png" id="arrow"></a>
     </section>
 </html>
