add contact page

--- a/index.html
+++ b/index.html
@@ -77,4 +77,8 @@
         </div>
         <a href=""><img src="./img/arrow.png" id="arrow"></a>
     </section>
+    <section id="contact" class="box">
+        <h2>Kontakt</h2>
+
+    </section>
 </html>
